@@ -1856,7 +1856,7 @@ C<repeat> value), or reset the running timer to the C<repeat> value.
 This sounds a bit complicated, see L<Be smart about timeouts>, above, for a
 usage example.
 
-=item ev_timer_remaining (loop, ev_timer *)
+=item ev_tstamp ev_timer_remaining (loop, ev_timer *)
 
 Returns the remaining time until a timer fires. If the timer is active,
 then this time is relative to the current event loop time, otherwise it's
